--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,9 @@
       "label": "echo",
       "type": "shell",
       "command": "./build.sh",
+      "windows": {
+        "command": "./build.cmd"
+      },
       "options": {
         "cwd": "${workspaceFolder}/unode-module"
       },
