--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,12 @@
         "command": "C:\\Program Files\\Git\\bin\\bash.exe",
         "args": [
           "./build.sh"
-        ]
+        ],
+        "options": {
+          "env": {
+            "UNITY_PROXYSERVER": ""
+          }
+        }
       },
       "options": {
         "cwd": "${workspaceFolder}/unode-module"
