--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "unity-nodeapi-test",
   "version": "0.0.0",
   "type": "module",
+  "main": "./src/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
