--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-reconciler": "^0.33.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react-reconciler": "^0.32.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
