--- a/unode-module/Packages/manifest.json
+++ b/unode-module/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "2.7.6",
     "com.unity.ide.visualstudio": "2.0.26",
     "com.unity.test-framework": "1.6.0",
     "com.unity.ugui": "2.0.0",
