--- a/unode-module/.gitignore
+++ b/unode-module/.gitignore
@@ -98,3 +98,6 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# Auto-generated UI Toolkit schemas
+/UIElementsSchema/
