--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "unode-module/Packages/net.ringoz.unity.nodeapi"]
-	path = unode-module/Packages/net.ringoz.unity.nodeapi
+[submodule "unode-module/Packages/unity-nodeapi"]
+	path = unode-module/Packages/unity-nodeapi
 	url = https://github.com/ringoz/unity-nodeapi.git
